--- a/.gitignore
+++ b/.gitignore
@@ -58,8 +58,8 @@ cover/
 # Django stuff:
 *.log
 local_settings.py
-
-.vscode/
+db.sqlite3
+db.sqlite3-journal
 
 
 # Flask stuff:
@@ -166,12 +166,6 @@ cython_debug/
 
 
 
-
-
-
-
-
-
 #For MAC USERS
 
 # General
@@ -201,3 +195,12 @@ Icon
 Network Trash Folder
 Temporary Items
 .apdisk
+
+
+
+
+# Custome files
+
+smith/Dockerfile
+smith/pkg/env
+.vscode/
