--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,4 +23,4 @@ jobs:
         pip install -r requirements.txt
     - name: Run Tests
       run: |
-        python manage.py test
+        python backend-django/manage.py test
