--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,6 +21,12 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+    - name: 'Create env file'
+      run: |
+        touch backend_django/backend_django/.env
+        echo APP_AUTH_TOKEN=${{ secrets.APP_AUTH_TOKEN }} >> backend_django/backend_django/.env
+        echo ENDPOINT=${{ secrets.ENDPOINT }} >> backend_django/backend_django/.env
+        echo PORT=${{ secrets.PORT }} >> backend_django/backend_django/.env
     - name: Run Tests
       run: |
         python backend_django/manage.py test
