--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -21,6 +21,11 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
+        pip install -r requirements-dev.txt
+    - name: Format code with black
+      run: |
+        pip install black
+        black .
     - name: 'Create env file'
       run: |
         touch backend_django/backend_django/.env
