--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,7 +16,9 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v3
       with:
-        python-version: 3.10.7
+        python-version: "3.10"
+      env:
+        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
