--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,6 +17,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: "3.10"
+        architecture: "x64"
       env:
         AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
     - name: Install Dependencies
