--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -16,7 +16,7 @@ jobs:
     - name: Set up Python 3.10
       uses: actions/setup-python@v4
       with:
-        python-version: "3.10.x"
+        python-version: "3.10"
         architecture: "x64"
       env:
         AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
