--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -18,8 +18,8 @@ jobs:
       with:
         python-version: "3.10"
         architecture: "x64"
-      env:
-        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
+#      env:
+#        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
