--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,6 +23,8 @@ jobs:
     - name: Install Dependencies
       run: |
         python -m pip install --upgrade pip
+        python3 -m venv ./venv
+        source venv/bin/activate
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
     - name: Format code with black
