--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
     - uses: actions/checkout@v3
-    - name: Set up Python 3.10
+    - name: Set up Python 3.8
       uses: actions/setup-python@v4
       with:
         python-version: 3.8.10
@@ -27,6 +27,8 @@ jobs:
         source venv/bin/activate
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
+        echo "VIRTUAL ENV:" $VIRTUAL_ENV
+
     - name: Format code with black
       run: |
         pip install black
@@ -39,6 +41,7 @@ jobs:
         echo PORT=${{ secrets.PORT }} >> backend_django/backend_django/.env
     - name: Coverage report
       run: |
+        echo "VIRTUAL ENV:" $VIRTUAL_ENV
         pip install coverage
         coverage run backend_django/manage.py test
         coverage report
