--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -17,7 +17,7 @@ jobs:
       uses: actions/setup-python@v3
       with:
         python-version: 3.8.10
-        architecture: "x64"
+        cache: 'pip'
 #      env:
 #        AGENT_TOOLSDIRECTORY: /opt/hostedtoolcache
     - name: Install Dependencies
