--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,8 +32,8 @@ jobs:
       run: |
         touch backend_django/backend_django/.env
         echo APP_AUTH_TOKEN=${{ secrets.APP_AUTH_TOKEN }} >> backend_django/backend_django/.env
-        echo ENDPOINT=${{ secrets.ENDPOINT }} >> backend_django/backend_django/.env
-        echo PORT=${{ secrets.PORT }} >> backend_django/backend_django/.env
+        echo MS_ENDPOINT=${{ secrets.MS_ENDPOINT }} >> backend_django/backend_django/.env
+        echo MS_PORT=${{ secrets.MS_PORT }} >> backend_django/backend_django/.env
         echo ALLOWED_HOST=${{ secrets.ALLOWED_HOST }} >> backend_django/backend_django/.env
     - name: Run test and coverage report
       run: |
