--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -32,9 +32,11 @@ jobs:
       run: |
         touch backend_django/.env
         echo APP_AUTH_TOKEN=${{ secrets.APP_AUTH_TOKEN }} >> backend_django/.env
-        echo MS_ENDPOINT=${{ secrets.MS_ENDPOINT }} >> backend_django/.env
-        echo MS_PORT=${{ secrets.MS_PORT }} >> backend_django/.env
-        echo ALLOWED_HOST=${{ secrets.ALLOWED_HOST }} >> backend_django/.env
+        echo MS_ENDPOINT=${{ secrets.ENDPOINT }} >> backend_django/.env
+        echo MS_PORT=${{ secrets.PORT }} >> backend_django/.env
+        echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> backend_django/.env
+        echo SECRET_KEY=${{ secrects.SECRET_KEY }} >> backend_djang/.env
+        echo DB_ENGINE=${{ secrects.DB_ENGINE }} >> backend_djang/.env
     - name: Run test and coverage report
       run: |
         cd backend_django
