--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -35,8 +35,8 @@ jobs:
         echo MS_ENDPOINT=${{ secrets.ENDPOINT }} >> backend_django/.env
         echo MS_PORT=${{ secrets.PORT }} >> backend_django/.env
         echo ALLOWED_HOSTS=${{ secrets.ALLOWED_HOSTS }} >> backend_django/.env
-        echo SECRET_KEY=${{ secrects.SECRET_KEY }} >> backend_djang/.env
-        echo DB_ENGINE=${{ secrects.DB_ENGINE }} >> backend_djang/.env
+        echo SECRET_KEY=${{ secrets.SECRET_KEY }} >> backend_djang/.env
+        echo DB_ENGINE=${{ secrets.DB_ENGINE }} >> backend_djang/.env
     - name: Run test and coverage report
       run: |
         cd backend_django
