--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -23,6 +23,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install Dependencies
       run: |
+        cd backend_django
         pip install -r requirements.txt
         pip install -r requirements-dev.txt
     - name: Format code with black
