--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -6,7 +6,12 @@ repos:
     -   id: end-of-file-fixer
     -   id: check-yaml
     -   id: check-added-large-files
-        exclude: ^backend_django/static/
+        exclude: |
+            (?x)^(
+                backend_django/static/|
+                docs/|
+            )$
+
 -   repo: https://github.com/psf/black
     rev: 23.1.0
     hooks:
