--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -1,3 +1,6 @@
 FROM nginx
 
 COPY ./conf.d/ /etc/nginx/conf.d
+#COPY ./sites-available/ /etc/nginx/sites-available
+#RUN mkdir /etc/nginx/sites-enabled
+#RUN ln -s /etc/nginx/sites-available/default.conf /etc/nginx/sites-enabled/default.conf
